--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "lessvar-chris",
-  "displayName": "lessVar_chris",
-  "description": "",
+  "name": "xy-cssvariable-helper",
+  "displayName": "xy-cssvariable-helper",
+  "description": "xy-cssvariable-helper",
+  "publisher": "xy-chris",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.70.0"
@@ -10,7 +11,6 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:chris_test",
     "onCommand:setLocations"
   ],
   "main": "./out/extension.js",
